@@ -118,7 +118,7 @@ void Uploads()
 			for (j = 0; j < 25; j++) {
 			    if (strlen(fdb.Desc[j])) {
 				snprintf(T_File.LDesc[k], 49, "%s", fdb.Desc[j]);
-				T_File.LDesc[k][49] = '\0';
+				T_File.LDesc[k][48] = '\0';
 				k++;
 			    }
 			}
